--- a/src/viz.jinja
+++ b/src/viz.jinja
@@ -32,8 +32,8 @@ text {
       {% for node in nodes %}<option value="{{node}}">{{node}}</option>{% endfor %}
     </datalist>
 
-    <input type="checkbox" id="allEdges" name="allEdges" value="allEdges">
-    <label for="allEdges">Show all edges</label>
+    <input type="checkbox" id="solutionEdges" name="solutionEdges" value="solutionEdges">
+    <label for="solutionEdges">Only show PCSF solution edges</label>
 
     <button id="saveButton">
         <big>⇩</big> Download PNG
@@ -136,7 +136,7 @@ function isNumber(n) {
 
 var force = d3.forceSimulation()
               .force("link", d3.forceLink().id(function(d) { return d.id; }))
-              .force("charge", d3.forceManyBody())
+              .force("charge", d3.forceManyBody().strength(-300))
               .force("center", d3.forceCenter(w / 2, h / 2));
 
 var link = g.selectAll(".link")
@@ -259,13 +259,11 @@ if (text_center) {
         .text(function(d) { return '\u2002' + d.id; });
 }
 
-
 /////////////////////////////////////////////////////////////////////////////
                       ///////    Highlight    ///////
 /////////////////////////////////////////////////////////////////////////////
 
 node.on("mouseover", function(d) { set_highlight(d); }).on("mouseout", function(d) { exit_highlight(); });
-
 
 function set_highlight(d) {
     svg.style("cursor", "pointer");
@@ -281,7 +279,6 @@ function set_highlight(d) {
         });
         link.style("stroke", function(o) {
             return o.source.index == d.index || o.target.index == d.index ? highlight_color : ((isNumber(o.score) && o.score >= 0) ? color(o.score) : default_link_color);
-
         });
     }
 }
@@ -325,16 +322,12 @@ function remove_focus() {
 /////////////////////////////////////////////////////////////////////////////
 
 function resize() {
-    var width = window.innerWidth,
-        height = window.innerHeight;
-    svg.attr("width", width).attr("height", height);
-
-    // force.size([force.size()[0] + (width - w) / zoom.scale(), force.size()[1] + (height - h) / zoom.scale()]).resume();
-    w = width;
-    h = height;
+    w = window.innerWidth;
+    h = window.innerHeight;
+    svg.attr("width", window.innerWidth).attr("height", window.innerHeight);
 }
 
-d3.select(window).on("resize", resize).on("keydown", keydown);
+d3.select(window).on("resize", resize)
 
 resize();
 
@@ -402,7 +395,51 @@ $("#magic").on('input', function () {
     else { remove_focus(); }
 });
 
+$("#solutionEdges").change(function() {
+    if(this.checked) {
+        g.selectAll(".link").filter(function(d) {return !d.in_solution}).style('opacity', 0)
+    } else {
+        g.selectAll(".link").style('opacity', 1)
+    }
+});
 
+
+// $("#solutionEdges").change(function() {
+//     if(this.checked) {
+//         link.exit()
+//         link = g.selectAll(".link").filter(function(d) {return !d.in_solution})
+//                 .data(graph.links.filter(function(d){return !d.in_solution}))
+//                 .enter().append("line")
+//                 .attr("class", "link")
+//                 .style("stroke-width", function(d) {
+//                     if (isNumber(d.cost) && d.cost >= 0) return width(1-d.cost);
+//                     else return default_stroke_width;
+//                 })
+//                 .style("stroke", function(d) {
+//                     if (isNumber(d.score) && d.score >= 0) return color(d.score);
+//                     else return default_link_color;
+//                 })
+
+//         force.force("link").links(graph.links.filter(function(d){return !d.in_solution}));
+
+//     } else {
+//         link.exit()
+//         link = g.selectAll(".link")
+//                 .data(graph.links)
+//                 .enter().append("line")
+//                 .attr("class", "link")
+//                 .style("stroke-width", function(d) {
+//                     if (isNumber(d.cost) && d.cost >= 0) return width(1-d.cost);
+//                     else return default_stroke_width;
+//                 })
+//                 .style("stroke", function(d) {
+//                     if (isNumber(d.score) && d.score >= 0) return color(d.score);
+//                     else return default_link_color;
+//                 })
+//         force.force("link").links(graph.links);
+
+//     }
+// });
 
 
 /////////////////////////////////////////////////////////////////////////////
